# Parallel-Programming

./: CMakeLists.txt  README.md
kernels/: my_kernels.cl
src/: Clmg.h  Utils.h  main.cpp
